agenda and images

--- a/documentation/S1.md
+++ b/documentation/S1.md
@@ -4,4 +4,34 @@
 
 ## Event URL: <https://www.meetup.com/dot-net-learners-house-hyderabad/events/300839711/>
 
-## YouTube URL: <https://www.youtube.com/watch?v=BBky8tK_dVY>
+## YouTube URL: <https://www.youtube.com/watch?v=BBky8tK_dVY
+
+## Software/Tools
+>
+> 1. Text Editor (Visual studio Code)
+> 2. GitHub Desktop
+> 3. Git
+
+## Resources/Productivity tools
+> 1. <https://developer.mozilla.org/en-US/>
+> 2. <https://docs.emmet.io/cheat-sheet/>
+> 3. <https://code.visualstudio.com/docs/editor/emmet>
+> 4. <https://cdnjs.com/libraries/font-awesome>
+> 5. <https://fontawesome.com/search?q=apple&o=r>
+> 6. <https://favicon.io/emoji-favicons/dizzy>
+> 7. <https://colorhunt.co/>
+> 8. <https://fonts.google.com/>
+> 9. <https://svglogomaker.com/>
+
+## Information
+![information](images/Information.PNG)
+
+## Agenda
+
+* Technologies and Starter app
+* Overview of HTML, CSS, and JavaScript
+* Creating a Simple Web Page.
+* Publishing the web page using GitHub pages.
+
+## Please refer to the Source Code of today's session for more details
+![alt text](images/SeatBelt.PNG)
