completed the 4th agenda

--- a/documentation/S1.md
+++ b/documentation/S1.md
@@ -82,6 +82,7 @@ Create the folder structure as shown below
 ![folder structure](S1/7.png)
 
 Write this code in index.html
+
 ```text
 <!DOCTYPE html>
 <html lang="en">
@@ -111,6 +112,7 @@ Write this code in index.html
 ```
 
 In styles.css file write the below code
+
 ```text
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap");
@@ -145,8 +147,38 @@ i {
 ```
 
 In script.js write the below code
+
 ```text
 console.log(`${Date()} :: This is a starter template for a simple web app.`);
 ```
 
+after writing code in these files the commit it and go to GitHUb and publish it using GitHub pages.
+
 ## 4. Publishing the web page using GitHub pages
+
+In GitHub go to your repository you want to publish.
+click on Settings tab.
+
+![settings tab](S1/8.png)
+
+click on pages in left side menu
+![pages](S1/9.png)
+
+selct the dropdown Deploy from branch on the right side and click on GitHub Actions
+![GitHub Actions](S1/10.png)
+
+Then click on Configur button
+![configure statichtml](S1/11.png)
+
+Then click on Commit changes green button on the right side
+![commit changes](S1/12.png)
+
+After clicking on Commit changes a pop up
+will open selct commit directly to the main branch and then click on Bypass rules and commit changes
+![bypass rule](S1/13.png)
+
+After that Go to settings->pages
+and click on the link or visit site button on the right side and your web page is published
+![website link](S1/14.png)
+
+![webpage](S1/15.png)
