changed the agenda 1

--- a/documentation/S1.md
+++ b/documentation/S1.md
@@ -30,7 +30,7 @@
 
 ## Agenda
 
-* Technologies and Starter app
+* Overview about Starter app,emmet,favicon,colourhunt,mdn,vscode,vscode extensions,google fonts
 * Overview of HTML, CSS, and JavaScript
 * Creating a Simple Web Page.
 * Publishing the web page using GitHub pages.
