VS code Extensions and tille change

--- a/documentation/S1.md
+++ b/documentation/S1.md
@@ -1,4 +1,4 @@
-# Session 1: Building Your First Web Page: An Introduction to HTML, CSS, and JavaScript"
+# Session 1: Building Your First Web Page with HTML, CSS, JavaScript, and hosting it in GitHub pages
 
 ## Date Time 11-May-2024 at 09:00 AM IST
 
@@ -11,7 +11,16 @@
 > 1. Text Editor (Visual studio Code)
 > 2. GitHub Desktop
 > 3. Git
+## VS Code Extensions
+VS Code extensions let you add languages, debuggers, and tools to your installation to support your development workflow.
 
+* esbenp.prettier-vscode
+* davidanson.vscode-markdownlint
+* ms-vscode.live-server
+* github.vscode-pull-request-github
+* mhutchie.git-graph
+* ms-python.debugpy
+  
 ## Resources/Productivity tools
 >
 > 1. <https://developer.mozilla.org/en-US/>
