--- a/documentation/S1.md
+++ b/documentation/S1.md
@@ -39,7 +39,7 @@ VS Code extensions let you add languages, debuggers, and tools to your installat
 
 ## Agenda
 
-* Overview about Starter app,emmet,favicon,colourhunt,mdn,vscode,vscode extensions,google fonts
+* Overview about vscode,Emmet,VS code extensions,Fontawsome,Favicon,Colourhunt,mdn,google fonts,Starter app
 * Overview of HTML, CSS, and JavaScript
 * Creating a Simple Web Page.
 * Publishing the web page using GitHub pages.
@@ -52,7 +52,19 @@ VS Code extensions let you add languages, debuggers, and tools to your installat
 
 ![BigPicture](S1/big_picture.png)
 
-## 1. Technologies and Starter app
+## 1. Overview about vscode,Emmet,VS code extensions,Fontawsome,Favicon,Colourhunt,mdn,google fonts,Starter app
+1. **VS Code:** It is a powerful code editor which runs on your desktop and is available for Windows ,macOS and linux  and it is free also 
+2. **Emmet:** Emmet is a powerful toolkit for web developers that allows for faster HTML and CSS workflow. It is a built in feature  in VS code.
+3. **VS code extensions:** VS Code extensions are add-ons that enhance the functionality of the Visual Studio Code editor.These extensions can add new features, improve existing ones, or provide tools for specific programming languages.
+4. **Fontawsome:** Fontawsome is the most popular way to icons to your website.
+5. **Favicon:** A favicon, short for "favorite icon," is a small image or icon associated with a website or webpage. It typically appears in the browser's address bar near title bar.
+6. **Colourhunt:** Colour Hunt is a platform and community for discovering and sharing color palettes. It's a valuable resource for designers and developers.
+7. **mdn:** MDN Web Docs, formerly known as the Mozilla Developer Network, is a comprehensive resource for web developers. It provides documentation, tutorials, and guides covering various web technologies, including HTML, CSS and JavaScript.
+8. **google fonts:** Google Fonts is a free and open-source platform provided by Google that allows users to browse, select, and use a wide variety of fonts for their web projects.
+9. **Starter app:** Creating a starter app, also known as a template, can be beneficial for several reasons.
+    * It saves developers time and effort by eliminating the need to recreate the same basic structure for each new project. Instead, they can start with a pre-configured setup and focus on building unique features.
+    * Using a starter app ensures consistency across projects
+    * It establishes common practices, file structures and coding conventions, that promote uniformity within a team or across multiple projects.
 
 ## 2. Overview of HTML, CSS, and JavaScript
 
