changes in agenda

--- a/documentation/S1.md
+++ b/documentation/S1.md
@@ -11,8 +11,9 @@
 > 1. Text Editor (Visual studio Code)
 > 2. GitHub Desktop
 > 3. Git
-> 
+>
 ## VS Code Extensions
+
 VS Code extensions let you add languages, debuggers, and tools to your installation to support your development workflow.
 
 * esbenp.prettier-vscode
@@ -21,7 +22,7 @@ VS Code extensions let you add languages, debuggers, and tools to your installat
 * mhutchie.git-graph
 * ms-python.debugpy
   
-## Resources/Productivity tools
+## Resources
 >
 > 1. <https://developer.mozilla.org/en-US/>
 > 2. <https://docs.emmet.io/cheat-sheet/>
@@ -38,9 +39,8 @@ VS Code extensions let you add languages, debuggers, and tools to your installat
 ![information](images/Information.PNG)
 
 ## Agenda
-
-* Overview about vscode,Emmet,VS code extensions,Fontawsome,Favicon,Colourhunt,mdn,google fonts,Starter app
-* Overview of HTML, CSS, and JavaScript
+ Big picture.
+ Overview of HTML, CSS, and JavaScript
 * Creating a Simple Web Page.
 * Publishing the web page using GitHub pages.
 
@@ -53,7 +53,8 @@ VS Code extensions let you add languages, debuggers, and tools to your installat
 ![BigPicture](S1/big_picture.png)
 
 ## 1. Overview about vscode,Emmet,VS code extensions,Fontawsome,Favicon,Colourhunt,mdn,google fonts,Starter app
-1. **VS Code:** It is a powerful code editor which runs on your desktop and is available for Windows ,macOS and linux  and it is free also 
+
+1. **VS Code:** It is a powerful code editor which runs on your desktop and is available for Windows ,macOS and linux  and it is free also
 2. **Emmet:** Emmet is a powerful toolkit for web developers that allows for faster HTML and CSS workflow. It is a built in feature  in VS code.
 3. **VS code extensions:** VS Code extensions are add-ons that enhance the functionality of the Visual Studio Code editor.These extensions can add new features, improve existing ones, or provide tools for specific programming languages.
 4. **Fontawsome:** Fontawsome is the most popular way to icons to your website.
