--- a/documentation/S1.md
+++ b/documentation/S1.md
@@ -7,105 +7,94 @@
 ## YouTube URL: <<https://www.youtube.com/watch?v=BBky8tK_dVY>
 
 ## Software/Tools
->
+
 > 1. Text Editor (Visual studio Code)
 > 2. GitHub Desktop
 > 3. Git
->
-## VS Code Extensions
 
-VS Code extensions let you add languages, debuggers, and tools to your installation to support your development workflow.
+## Pre-requisites
 
-* esbenp.prettier-vscode
-* davidanson.vscode-markdownlint
-* ms-vscode.live-server
-* mhutchie.git-graph
-* ms-python.debugpy
-  
-## Resources
->
-> 1. <https://developer.mozilla.org/en-US/>
-> 2. <https://docs.emmet.io/cheat-sheet/>
-> 3. <https://code.visualstudio.com/docs/editor/emmet>
-> 4. <https://cdnjs.com/libraries/font-awesome>
-> 5. <https://fontawesome.com/search?q=apple&o=r>
-> 6. <https://favicon.io/emoji-favicons/dizzy>
-> 7. <https://colorhunt.co/>
-> 8. <https://fonts.google.com/>
-> 9. <https://svglogomaker.com/>
+> 1. Basic programming knowledge for 2-4 months
 
 ## Information
 
 ![information](images/Information.PNG)
 
 ## Agenda
- Big picture.
- Overview of HTML, CSS, and JavaScript
-* Creating a Simple Web Page.
-* Publishing the web page using GitHub pages.
 
-## Please refer to the Source Code of today's session for more details
+> 1. Big picture
+> 1. Overview of HTML, CSS, and JavaScript
+> 1. Creating starter project
+> 1. Verifying the starter project locally
+> 1. Publishing the web page using GitHub pages
+> 1. Verifying the starter project using hosted URL.
+> 1. Q & A
+
+## Please refer to the [Source Code](https://github.com/intikhab-h-bhat/speaker-series-2024) of today's session for more details
 
 ![SeatBelt](images/SeatBelt.PNG)
 
-## Big Picture
+## 1. Big Picture
+
+> 1. Discussion and Demo
+
+### Image of the hosted web site
 
 ![BigPicture](S1/big_picture.png)
 
-## 1. Overview about vscode,Emmet,VS code extensions,Fontawsome,Favicon,Colourhunt,mdn,google fonts,Starter app
+## 2. Introduction to HTML, CSS, and JavaScript
 
-1. **VS Code:** It is a powerful code editor which runs on your desktop and is available for Windows ,macOS and linux  and it is free also
-2. **Emmet:** Emmet is a powerful toolkit for web developers that allows for faster HTML and CSS workflow. It is a built in feature  in VS code.
-3. **VS code extensions:** VS Code extensions are add-ons that enhance the functionality of the Visual Studio Code editor.These extensions can add new features, improve existing ones, or provide tools for specific programming languages.
-4. **Fontawsome:** Fontawsome is the most popular way to icons to your website.
-5. **Favicon:** A favicon, short for "favorite icon," is a small image or icon associated with a website or webpage. It typically appears in the browser's address bar near title bar.
-6. **Colourhunt:** Colour Hunt is a platform and community for discovering and sharing color palettes. It's a valuable resource for designers and developers.
-7. **mdn:** MDN Web Docs, formerly known as the Mozilla Developer Network, is a comprehensive resource for web developers. It provides documentation, tutorials, and guides covering various web technologies, including HTML, CSS and JavaScript.
-8. **google fonts:** Google Fonts is a free and open-source platform provided by Google that allows users to browse, select, and use a wide variety of fonts for their web projects.
-9. **Starter app:** Creating a starter app, also known as a template, can be beneficial for several reasons.
-    * It saves developers time and effort by eliminating the need to recreate the same basic structure for each new project. Instead, they can start with a pre-configured setup and focus on building unique features.
-    * Using a starter app ensures consistency across projects
-    * It establishes common practices, file structures and coding conventions, that promote uniformity within a team or across multiple projects.
+> 1. **HTML** is the foundation of web development. It defines the structure and content of web pages using markup tags. HTML tags are used to create elements such as headings, paragraphs, images, links, and forms.
+> 1. **CSS** (Cascading Style Sheets): CSS is used to style HTML elements and define their appearance on the web page. It allows developers to control aspects like layout, colors, fonts, and spacing. CSS can be written inline, embedded within HTML, or in external style sheets.
+> 1. **JavaScript** is a versatile programming language used to add interactivity and dynamic behavior to web pages. It enables features like form validation, animations and more. Like CSS JavaScript can be embedded within HTML, or in external JavaScript file.
 
-## 2. Overview of HTML, CSS, and JavaScript
+## 3. VS Code, VS Code extensions
 
-* **HTML** is the foundation of web development. It defines the structure and content of web pages using markup tags. HTML tags are used to create elements such as headings, paragraphs, images, links, and forms.
-  
-* **CSS** (Cascading Style Sheets): CSS is used to style HTML elements and define their appearance on the web page. It allows developers to control aspects like layout, colors, fonts, and spacing. CSS can be written inline, embedded within HTML, or in external style sheets.
-  
-* **JavaScript** is a versatile programming language used to add interactivity and dynamic behavior to web pages. It enables features like form validation, animations and more. Like CSS JavaScript can be embedded within HTML, or in external JavaScript file.
+> 1. Discussion and Demo
+> 1. **VS Code:** It is a powerful code editor which runs on your desktop and is available for Windows ,macOS and linux  and it is free also
+> 1. **VS code extensions:** VS Code extensions are add-ons that enhance the functionality of the Visual Studio Code editor.These extensions can add new features, improve existing ones, or provide tools for specific programming languages.
+>    - esbenp.prettier-vscode
+>    - davidanson.vscode-markdownlint
+>    - ms-vscode.live-server
+>    - mhutchie.git-graph
+>    - ms-python.debugpy
 
-## 3. Creating a Simple Web Page
+## 4. Useful resources
 
-Create a new repository in GitHub
->>
->> 1. On the top right corner, click on + and select 'New repository'
-![New Repository](S1/1.png)
+> 1. Discussion and Demo
+> 1. **mdn:** MDN Web Docs, formerly known as the Mozilla Developer Network, is a comprehensive resource for web developers. It provides documentation, tutorials, and guides covering various web technologies, including HTML, CSS and JavaScript.
+> 1. **Colourhunt:** Colour Hunt is a platform and community for discovering and sharing color palettes. It's a valuable resource for designers and developers.
+> 1. **Fontawsome:** Fontawsome is the most popular way to icons to your website.
+> 1. **Favicon:** A favicon, short for "favorite icon," is a small image or icon associated with a website or webpage. It typically appears in the browser's address bar near title bar.
+> 1. **google fonts:** Google Fonts is a free and open-source platform provided by Google that allows users to browse, select, and use a wide variety of fonts for their web projects.
+> 1. [**SVG logo maker:**](https://svglogomaker.com/) to be debe
 
-Create your repository using the basic template
-![create Repository](S1/2.png)
+## 5. Starter Project
 
-## 2.  Setting branch policies
+> 1. Discussion and Demo
+> 1. **Starter Project:** Creating a starter app, also known as a template, can be beneficial for several reasons.
+>    - It saves developers time and effort by eliminating the need to recreate the same basic structure for each new project. Instead, they can start with a pre-configured setup and focus on building unique features.
+>    - Using a starter app ensures consistency across projects
+>    - It establishes common practices, file structures and coding conventions, that promote uniformity within a team or across multiple projects.
 
-Go to Settings --> Branches, and select 'Add branch protection rule'
-![Branch Protection](S1/3.png)
+## 6. Creating a `Coffee Shop's` Home Page
 
-Under 'Branch name pattern' write main and select 'Require a pull request before merging'
-![Branch Rule](S1/4.png)
+### 6.1. Create a new repository in GitHub
 
-After creating branch rules clone the prject.
+> 1. On the top right corner, click on + and select 'New repository'
+> 1. Create your repository using the basic template
+> 1. Go to Settings --> Branches, and select 'Add branch protection rule'
+> 1. Under 'Branch name pattern' write main and select 'Require a pull request before merging'
+> 1. After creating branch rules clone the prject.
 Under 'Code', select 'Open with Github Desktop' to clone locally.
-![Clone locally](S1/5.png)
+> 1. open in VS Code, click on 'Open with Visual Studio Code'
+> 1. Create the folder structure as shown below
 
-o open in VS Code, click on 'Open with Visual Studio Code'
-![GitHub Desktop](S1/6.png)
+### 6.2. Index.html
 
-Create the folder structure as shown below
-![folder structure](S1/7.png)
+> 1. Discussion and Demo
 
-Write this code in index.html
-
-```text
+```html
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -122,20 +111,26 @@ Write this code in index.html
     />
     <link rel="stylesheet" href="styles.css" />
   </head>
+  
   <body>
+
     <div>
       <h1>Intikhabs Coffee Shop <i class="fa-solid fa-mug-hot"></i></h1>
       <h1><i class="fa-solid fa-laptop"></i></h1>
     </div>
+    
     <script src="script.js"></script>
+
   </body>
 </html>
 
 ```
 
-In styles.css file write the below code
+### 6.3. Styles.css
 
-```text
+> 1. Discussion and Demo
+
+```css
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap");
 
@@ -168,15 +163,17 @@ i {
 
 ```
 
-In script.js write the below code
+### 6.4. Script.js
 
-```text
+```javascript
 console.log(`${Date()} :: This is a starter template for a simple web app.`);
 ```
 
-after writing code in these files the commit it and go to GitHUb and publish it using GitHub pages.
+## 7. Verify the changes locally
 
-## 4. Publishing the web page using GitHub pages
+> 1. Discussion and Demo
+
+## 8. Publishing the web page using GitHub pages
 
 In GitHub go to your repository you want to publish.
 click on Settings tab.
@@ -204,3 +201,21 @@ and click on the link or visit site button on the right side and your web page i
 ![website link](S1/14.png)
 
 ![webpage](S1/15.png)
+
+---
+
+## 9. Summary / Q&A
+
+> 1. Discussion and Demo
+
+## 10. Appendix A
+
+> 1. List of Images
+
+![New Repository](S1/1.png)
+![create Repository](S1/2.png)
+![Branch Protection](S1/3.png)
+![Branch Rule](S1/4.png)
+![Clone locally](S1/5.png)
+![GitHub Desktop](S1/6.png)
+![folder structure](S1/7.png)
