svg logo maker and change in Resourses

--- a/documentation/S1.md
+++ b/documentation/S1.md
@@ -62,12 +62,12 @@
 ## 4. Useful resources
 
 > 1. Discussion and Demo
-> 1. **mdn:** MDN Web Docs, formerly known as the Mozilla Developer Network, is a comprehensive resource for web developers. It provides documentation, tutorials, and guides covering various web technologies, including HTML, CSS and JavaScript.
-> 1. **Colourhunt:** Colour Hunt is a platform and community for discovering and sharing color palettes. It's a valuable resource for designers and developers.
-> 1. **Fontawsome:** Fontawsome is the most popular way to icons to your website.
-> 1. **Favicon:** A favicon, short for "favorite icon," is a small image or icon associated with a website or webpage. It typically appears in the browser's address bar near title bar.
-> 1. **google fonts:** Google Fonts is a free and open-source platform provided by Google that allows users to browse, select, and use a wide variety of fonts for their web projects.
-> 1. [**SVG logo maker:**](https://svglogomaker.com/) to be debe
+> 1. [**mdn:**](https://developer.mozilla.org/en-US/) MDN Web Docs, formerly known as the Mozilla Developer Network, is a comprehensive resource for web developers. It provides documentation, tutorials, and guides covering various web technologies, including HTML, CSS and JavaScript.
+> 1. [**Colourhunt:**](https://colorhunt.co/) Colour Hunt is a platform and community for discovering and sharing color palettes. It's a valuable resource for designers and developers.
+> 1. [**Fontawsome:**](https://fontawesome.com/search?q=apple&o=r) Fontawsome is the most popular way to icons to your website.
+> 1. [**Favicon:**](https://favicon.io/emoji-favicons/dizzy) A favicon, short for "favorite icon," is a small image or icon associated with a website or webpage. It typically appears in the browser's address bar near title bar.
+> 1. [**google fonts:**](https://fonts.google.com/) Google Fonts is a free and open-source platform provided by Google that allows users to browse, select, and use a wide variety of fonts for their web projects.
+> 1. [**SVG logo maker:**](https://svglogomaker.com/) SVG Logo Maker is a simple online tool that allows you to create logos using SVG (Scalable Vector Graphics), which are ideal for high-quality graphics that can be scaled to any size without losing quality.
 
 ## 5. Starter Project
 
