--- a/documentation/S1.md
+++ b/documentation/S1.md
@@ -101,7 +101,6 @@ Under 'Code', select 'Open with Github Desktop' to clone locally.
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
-    <title>Coffee Shop</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -110,19 +109,48 @@ Under 'Code', select 'Open with Github Desktop' to clone locally.
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="styles.css" />
-  </head>
-  
-  <body>
-
-    <div>
-      <h1>Intikhabs Coffee Shop <i class="fa-solid fa-mug-hot"></i></h1>
-      <h1><i class="fa-solid fa-laptop"></i></h1>
-    </div>
     
-    <script src="script.js"></script>
+    <title>Top Navbar</title>
+  </head>
 
+  <body>
+    <nav>
+      <div class="nav-main">
+        <div class="nav-header">
+          <img src="./logo.svg" alt="logo" />
+          <i class="fa-solid fa-mug-hot"></i>
+          <ul class="menu">
+            <li>
+              <a href="#">Home</a>
+            </li>
+            <li>
+              <a href="#">About</a>
+            </li>
+            <li>
+              <a href="#">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="welcome-msg">
+      <h1>Welcome to Intikhab's Coffee Shop.</h1>
+    </div>
+    <div class="banner-div">
+      <img id="banner1" src="Banner.PNG" />
+    </div>
+    <p>
+      Image by
+      <a
+        href="https://www.freepik.com/free-vector/realistic-coffee-shop-template_22896767.htm#query=coffee%20banner&position=1&from_view=keyword&track=ais&uuid=faf66f30-6102-4c4a-b9d6-56a8262fa0c6"
+        >Freepik</a
+      >
+    </p>
+
+    <script src="script.js"></script>
   </body>
 </html>
+
 
 ```
 
@@ -131,7 +159,6 @@ Under 'Code', select 'Open with Github Desktop' to clone locally.
 > 1. Discussion and Demo
 
 ```css
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap");
 
 * {
@@ -139,14 +166,12 @@ Under 'Code', select 'Open with Github Desktop' to clone locally.
 }
 
 body {
-  font-family: "Roboto", "Montserrat", sans-serif;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 100vh;
-  justify-content: center;
-  overflow: hidden;
+  font-family: "Montserrat", sans-serif;
   margin: 0;
+  padding: 0;
+  height: 100vh;
+  line-height: 2.2;
+  font-size: 0.875rem;
 }
 
 h1 {
@@ -156,10 +181,69 @@ h1 {
 }
 
 i {
-  font-size: 5rem;
-  margin-bottom: 1rem;
-  color: blueviolet;
+  font-size: 3rem;
+  color: #1e8cfa;
 }
+
+nav {
+  background: #f6f5f2;
+  box-shadow: 0 5px 15px #634b01;
+}
+.nav-main {
+  max-width: 95%;
+  margin: 0 0.2rem 0 0.2rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.nav-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 230px;
+}
+.menu {
+  height: auto;
+  display: flex;
+}
+
+ul {
+  list-style-type: none;
+  font-family: sans-serif;
+}
+
+a {
+  text-decoration: none;
+}
+
+.menu a {
+  color: #074173;
+  font-weight: bolder;
+  font-size: 1.2rem;
+  letter-spacing: 0.1rem;
+  display: block;
+  padding: 0;
+  margin: 0 0.5rem;
+  transition: all 0.3s linear;
+}
+.menu a:hover {
+  background: #074173;
+  color: #9ed1f5;
+}
+.welcome-msg {
+  display: flex;
+  justify-content: center;
+  font-family: sans-serif;
+}
+
+.banner-div {
+  margin-top: 0.7rem;
+}
+#banner1 {
+  height: 400px;
+  width: 100%;
+}
+
 
 ```
 
@@ -200,7 +284,7 @@ After that Go to settings->pages
 and click on the link or visit site button on the right side and your web page is published
 ![website link](S1/14.png)
 
-![webpage](S1/15.png)
+![webpage](S1/big_picture.png)
 
 ---
 
