changed in prerequsite

--- a/documentation/S1.md
+++ b/documentation/S1.md
@@ -15,6 +15,7 @@
 ## Pre-requisites
 
 > 1. Basic programming knowledge for 2-4 months
+> 2. GitHub account
 
 ## Information
 
@@ -30,7 +31,7 @@
 > 1. Verifying the starter project using hosted URL.
 > 1. Q & A
 
-## Please refer to the [Source Code](https://github.com/intikhab-h-bhat/speaker-series-2024) of today's session for more details
+## Please refer to the [Source Code](https://github.com/intikhab-h-bhat/hcj-topnavbar) of today's session for more details
 
 ![SeatBelt](images/SeatBelt.PNG)
 
@@ -64,7 +65,7 @@
 > 1. Discussion and Demo
 > 1. [**mdn:**](https://developer.mozilla.org/en-US/) MDN Web Docs, formerly known as the Mozilla Developer Network, is a comprehensive resource for web developers. It provides documentation, tutorials, and guides covering various web technologies, including HTML, CSS and JavaScript.
 > 1. [**Colourhunt:**](https://colorhunt.co/) Colour Hunt is a platform and community for discovering and sharing color palettes. It's a valuable resource for designers and developers.
-> 1. [**Fontawsome:**](https://fontawesome.com/search?q=apple&o=r) Fontawsome is the most popular way to icons to your website.
+> 1. [**Fontawsome:**](https://fontawesome.com/search?q=apple&o=r) Fontawsome is the most popular way to add icons to your website.
 > 1. [**Favicon:**](https://favicon.io/emoji-favicons/dizzy) A favicon, short for "favorite icon," is a small image or icon associated with a website or webpage. It typically appears in the browser's address bar near title bar.
 > 1. [**google fonts:**](https://fonts.google.com/) Google Fonts is a free and open-source platform provided by Google that allows users to browse, select, and use a wide variety of fonts for their web projects.
 > 1. [**SVG logo maker:**](https://svglogomaker.com/) SVG Logo Maker is a simple online tool that allows you to create logos using SVG (Scalable Vector Graphics), which are ideal for high-quality graphics that can be scaled to any size without losing quality.
@@ -265,7 +266,7 @@ click on Settings tab.
 ![settings tab](S1/8.png)
 
 click on pages in left side menu
-![pages](S1/9.png)
+![pages](S1/9..png)
 
 selct the dropdown Deploy from branch on the right side and click on GitHub Actions
 ![GitHub Actions](S1/10.png)
