--- a/documentation/S1.md
+++ b/documentation/S1.md
@@ -38,6 +38,11 @@
 ## 1. Big Picture
 
 > 1. Discussion and Demo
+> 2. Understanding the Technologies:HTML, CSS, JavaScript,GitHub pages.
+> 3. Creating Your Web Page.
+> 4. Setting Up a GitHub Repository.
+> 5. Enabling GitHub Pages.
+> 6. Publishing your web page.
 
 ### Image of the hosted web site
 
