added yhe Q/A part

--- a/documentation/S1.md
+++ b/documentation/S1.md
@@ -271,23 +271,28 @@ click on Settings tab.
 ![settings tab](S1/8.png)
 
 click on pages in left side menu
+
 ![pages](S1/9..png)
 
 selct the dropdown Deploy from branch on the right side and click on GitHub Actions
 ![GitHub Actions](S1/10.png)
 
 Then click on Configur button
+
 ![configure statichtml](S1/11.png)
 
 Then click on Commit changes green button on the right side
+
 ![commit changes](S1/12.png)
 
 After clicking on Commit changes a pop up
 will open selct commit directly to the main branch and then click on Bypass rules and commit changes
+
 ![bypass rule](S1/13.png)
 
 After that Go to settings->pages
 and click on the link or visit site button on the right side and your web page is published
+
 ![website link](S1/14.png)
 
 ![webpage](S1/big_picture.png)
@@ -296,16 +301,23 @@ and click on the link or visit site button on the right side and your web page i
 
 ## 9. Summary / Q&A
 
-> 1. Discussion and Demo
+1. SUMMARY / RECAP / Q&A
+2. Any open queries, I will get back through meetup chat/twitter.
 
 ## 10. Appendix A
 
 > 1. List of Images
 
 ![New Repository](S1/1.png)
+
 ![create Repository](S1/2.png)
+
 ![Branch Protection](S1/3.png)
-![Branch Rule](S1/4.png)
+
+![Branch Rule](S1/4..png)
+
 ![Clone locally](S1/5.png)
+
 ![GitHub Desktop](S1/6.png)
+
 ![folder structure](S1/7.png)
