change in document

--- a/documentation/S1.md
+++ b/documentation/S1.md
@@ -103,58 +103,61 @@ Under 'Code', select 'Open with Github Desktop' to clone locally.
 ```html
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="styles.css" />
-    
-    <title>Top Navbar</title>
-  </head>
 
-  <body>
-    <nav>
-      <div class="nav-main">
-        <div class="nav-header">
-          <img src="./logo.svg" alt="logo" />
-          <i class="fa-solid fa-mug-hot"></i>
-          <ul class="menu">
-            <li>
-              <a href="#">Home</a>
-            </li>
-            <li>
-              <a href="#">About</a>
-            </li>
-            <li>
-              <a href="#">Contact</a>
-            </li>
-          </ul>
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="styles.css" />
+
+  <title>Top Navbar</title>
+</head>
+
+<body>
+
+  <nav>
+    <div class="nav-main">
+      <div class="nav-header">
+        <img src="./logo.svg" alt="logo" />
+        <i class="fa-solid fa-mug-hot"></i>
+        <ul class="menu">
+          <li>
+            <a href="#">Home</a>
+          </li>
+          <li>
+            <a href="#">About</a>
+          </li>
+          <li>
+            <a href="#">Contact</a>
+          </li>
+        </ul>
       </div>
-    </nav>
-    <div class="welcome-msg">
-      <h1>Welcome to Intikhab's Coffee Shop.</h1>
     </div>
-    <div class="banner-div">
-      <img id="banner1" src="Banner.PNG" />
-    </div>
-    <p>
-      Image by
-      <a
-        href="https://www.freepik.com/free-vector/realistic-coffee-shop-template_22896767.htm#query=coffee%20banner&position=1&from_view=keyword&track=ais&uuid=faf66f30-6102-4c4a-b9d6-56a8262fa0c6"
-        >Freepik</a
-      >
-    </p>
+  </nav>
 
-    <script src="script.js"></script>
-  </body>
+  <div class="welcome-msg">
+    <h1>Welcome to Intikhab's Coffee Shop.</h1>
+  </div>
+
+  <div class="banner-div">
+    <img id="banner1" src="Banner.PNG" />
+    <span class="image-credit">
+      Image by <a
+        href="https://www.freepik.com/free-vector/realistic-coffee-shop-template_22896767.htm#query=coffee%20banner&position=1&from_view=keyword&track=ais&uuid=faf66f30-6102-4c4a-b9d6-56a8262fa0c6">Freepik</a>
+
+    </span>
+  </div>
+
+  <footer>
+    <p>&copy; 2024 Coffee Shop. All rights reserved.</p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+
 </html>
 
 
@@ -182,7 +185,8 @@ body {
 
 h1 {
   font-size: 3rem;
-  margin-bottom: 1rem;
+  margin-top: .5rem;
+  margin-bottom: .5rem;
   color: #1c1678;
 }
 
@@ -195,6 +199,7 @@ nav {
   background: #f6f5f2;
   box-shadow: 0 5px 15px #634b01;
 }
+
 .nav-main {
   max-width: 95%;
   margin: 0 0.2rem 0 0.2rem;
@@ -202,12 +207,14 @@ nav {
   align-items: center;
   justify-content: space-between;
 }
+
 .nav-header {
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 230px;
 }
+
 .menu {
   height: auto;
   display: flex;
@@ -232,24 +239,44 @@ a {
   margin: 0 0.5rem;
   transition: all 0.3s linear;
 }
+
 .menu a:hover {
   background: #074173;
   color: #9ed1f5;
 }
+
 .welcome-msg {
   display: flex;
   justify-content: center;
   font-family: sans-serif;
 }
 
-.banner-div {
-  margin-top: 0.7rem;
+banner-div {
+  margin-top: .6rem;
+  position: relative;
 }
+
+.image-credit {
+  position: absolute;
+  top: 150px;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.7);
+  padding: 5px;
+  margin: 0;
+}
+
 #banner1 {
   height: 400px;
   width: 100%;
 }
 
+footer {
+  background-color: #E4C59E;
+  color: #803D3B;
+  text-align: left;
+  padding: 5px;
+  margin-top: 99px;
+}
 
 ```
 
